# http-handler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  index.cjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  lint.yml
src/: README.md  body.rs  extensions.rs  handler.rs  lib.rs  napi.rs  stream_handle.rs  stream_handle.rs.bak  types.rs
src/websocket/: codec.rs  frame.rs  mod.rs  wrapper.rs
test/: headers.test.mjs  request.test.mjs  response.test.mjs
