[package]
name = "http-handler"
version = "1.0.0"
description = "A request handling library for use with the http crate"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "Apache-2.0"
repository = "https://github.com/platformatic/http-rewriter"
keywords = ["http", "handling", "library"]
categories = ["network-programming", "web-development"]
edition = "2024"

[lib]
name = "http_handler"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[features]
default = []
napi-support = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[build-dependencies]
napi-build = { version = "2.2.1", optional = true }

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
http = "1.0"
# http-body = "1.0"
# http-rewriter = { path = "../http-rewriter" }
# napi = { path = "../napi-rs/crates/napi", features = ["napi4"], optional = true }
# napi-derive = { path = "../napi-rs/crates/macro", optional = true }
napi = { version = "3.0.0-beta.8", features = ["napi4"], optional = true }
napi-derive = { version = "3.0.0-beta.8", optional = true }
# napi = { version = "2.12.2", default-features = false, features = ["napi4"], optional = true }
# napi-derive = { version = "2.12.2", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
