[package]
name = "http-handler"
version = "1.0.0"
description = "A request handling library for use with the http crate"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "Apache-2.0"
repository = "https://github.com/platformatic/http-rewriter"
keywords = ["http", "handling", "library"]
categories = ["network-programming", "web-development"]
edition = "2024"

[lib]
name = "http_handler"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[features]
default = []
napi-support = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[build-dependencies]
napi-build = { version = "2", optional = true }

[dependencies]
bytes = "1.10.1"
http = "1.0"
tokio = { version = "1.45.1", features = ["sync", "macros", "rt", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
http-body = "1.0"
http-body-util = "0.1"
futures-core = "0.3"
napi = { version = "3", features = ["napi4", "tokio_rt", "async"], optional = true }
napi-derive = { version = "3", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
